ppc64el dependency and lintian adjustments
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6167 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (352.79-3) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * get-orig-source: Generate an additional .orig-ppc64el tarball for ppc64el.
   * Add preliminary support for ppc64el, only supports CUDA/OpenCL.
+  * Update lintian overrides.
 
   [ Luca Boccassi ]
   * Update reportbug template to include content of
