--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (355.11-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (355.11-2) experimental; urgency=medium
 
   [ Andreas Beckmann ]
   * Merge changes from 352.79-3.
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (355.11-2) UNRELEASED; urgency=medium
   * 355.11 does not yet support xorg-video-abi-20.  (Closes: #813565)
   * Update lintian overrides.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 02 Feb 2016 02:10:07 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 16 Feb 2016 13:52:58 +0100
 
 nvidia-graphics-drivers (355.11-1) experimental; urgency=medium
 
