--- a/debian/changelog
+++ b/debian/changelog
@@ -2,29 +2,26 @@ nvidia-graphics-drivers (361.28-1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * New upstream long lived branch release 361.28 (2016-02-09). (Closes: #814347)
-    - Added support for the following GPU: GeForce 945A
-    - Added a legacy, non-GLVND libGL.so GLX client library to the NVIDIA Linux
-      driver installer package, and the ability to select between a GLVND or
-      non-GLVND GLX client library at installation time. This allows users to
-      install the legacy non-GLVND GLX client library in order to work around
-      compatibility issues which may arise due to GLX applications which depend
-      upon behaviors of the NVIDIA GLX client driver which are not defined by
-      the Linux OpenGL ABI version 1.0. 
-      By default, nvidia-installer will install the legacy, non-GLVND GLX client
-      libraries. The --glvnd-glx-client command line option can be used to
-      override the default, and install the GLVND GLX client libraries instead.
-      Please contact the vendors of any applications that are not compatible
-      with GLVND to ensure that their applications be updated for compatibility
-      with GLVND.
+    - Added support for the following GPU: GeForce 945A.
+    *** TODO: ***
+    - Added a legacy, non-GLVND libGL.so GLX client library to the NVIDIA
+      Linux driver installer package, and the ability to select between a
+      GLVND or non-GLVND GLX client library at installation time. This
+      allows users to install the legacy non-GLVND GLX client library in
+      order to work around compatibility issues which may arise due to GLX
+      applications which depend upon behaviors of the NVIDIA GLX client
+      driver which are not defined by the Linux OpenGL ABI version 1.0.
+      By default, nvidia-installer will install the legacy, non-GLVND GLX
+      client libraries. The --glvnd-glx-client command line option can be
+      used to override the default, and install the GLVND GLX client
+      libraries instead. Please contact the vendors of any applications
+      that are not compatible with GLVND to ensure that their applications
+      be updated for compatibility with GLVND.
       The presence of multiple GLX client libraries in the package has
-      implications for repackagers of the NVIDIA driver; see the libGL.so entry
-      in the "Installed Components" chapter of the README for details. 
-  * New upstream beta branch release 361.18 (2016-01-13).
-    - Added support for the following GPUs: GeForce 940MX Quadro M500M
-    - Fixed a bug in the EGL driver where a mutex was unlocked more than once.
-      This triggers undefined behavior, and in particular, if lock elision is
-      enabled in glibc, may result in a segmentation fault.
-  * New upstream beta branch release 361.16 (2016-01-05).
+      implications for repackagers of the NVIDIA driver; see the libGL.so
+      entry in the "Installed Components" chapter of the README for details.
+  * New upstream beta 361.18 (2016-01-13).
+  * New upstream beta 361.16 (2016-01-05).
     - The OpenGL Vendor-Neutral Driver (GLVND) infrastructure is now included
       and supported by the NVIDIA GLX and OpenGL drivers.  This should not
       cause any visible changes in behavior for end users, but some internal
@@ -32,23 +29,14 @@ nvidia-graphics-drivers (361.28-1) UNRELEASED; urgency=medium
       These changes may affect scripts that rely on the presence of NVIDIA
       OpenGL driver components other than those specified in the Linux OpenGL
       ABI version 1.0, maintainers of alternative NVIDIA driver installation
-      packages, and applications which rely on the presence of any
-      non- OpenGL/GLX symbols in the libGL.so.1 library and its dependencies
-      in any way.
-      Please see: https://github.com/NVIDIA/libglvnd For more information on
-      the GLVND project.
+      packages, and applications which rely on the presence of any non-
+      OpenGL/GLX symbols in the libGL.so.1 library and its dependencies in
+      any way.
+      Please see:
+        https://github.com/NVIDIA/libglvnd
+      For more information on the GLVND project.
       The Linux OpenGL ABI version 1.0 specification is available at:
-      https://www.opengl.org/registry/ABI
-    - Updated nvidia-installer to run ldconfig(8) and depmod(8) after
-      uninstalling an existing driver, instead of only running these two
-      commands when installing a new driver.
-    - Removed the VDPAU wrapper and trace libraries libvdpau.so.1 and
-      libvdpau_trace.so.1 from the driver package.  These libraries may be
-      available via your distribution's package management system, or can be
-      compiled from the sources available at:
-      http://people.freedesktop.org/~aplattner/vdpau/
-      Please see http://freedesktop.org/wiki/Software/VDPAU/ for more
-      information.
+        https://www.opengl.org/registry/ABI
   * Refresh man-fixes-nvidia-smi.patch (failed to apply on 361.18).
   * Update nv-readme.ids.
   * Updated watch version to 361.
@@ -94,11 +82,6 @@ nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
     - Fixed a regression that could cause OpenGL or VDPAU applications to
       hang in Xinerama layouts which include multiple X screens that are
       driven by the same GPU.
-    - Added a fallback to allow GLX to function when UNIX domain socket
-      communication is blocked between NVIDIA client-side GLX and NVIDIA
-      server-side GLX. For example, the default SELinux policy on Fedora 22
-      prevents the NVIDIA 358.09 GLX driver from working in GDM3:
-      https://bugzilla.redhat.com/show_bug.cgi?id=1271401
     - Fixed a regression from 358.09 that caused G-SYNC monitors configured to
       use 3D Vision stereo to go blank and report an unsupported signal.
     - Fixed a regression from 358.09 that caused OpenGL applications that failed
@@ -2314,7 +2297,7 @@ nvidia-graphics-drivers (304.131-1) wheezy; urgency=medium
     - Update conftest.sh function scatterlist for logic reversal in
       304.131/340.96/352.63, support both ways.
   * debian/control: Add Breaks between mismatching upstream versions of
-    libcuda1 and nvidia-alternative to prevent partial upgrades. 
+    libcuda1 and nvidia-alternative to prevent partial upgrades.
   * Upload to wheezy.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 14 Dec 2015 09:53:49 +0100
