--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (355.11-3) UNRELEASED; urgency=medium
+
+  * Split libglvnd-nvidia in libopengl0-nvidia and libgldispatch0-nvidia
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 17 Feb 2016 23:36:31 +0000
+
 nvidia-graphics-drivers (355.11-2) experimental; urgency=medium
 
   [ Andreas Beckmann ]
