--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
   * Do not run dh_strip_nondeterminism, it may perform modifications not
     permitted by the NVIDIA license.
   * Use #!armhf# and #HAS_UVM# substitutions as in unstable.
+  * Add slave alternative for libnvcuvid.so (340.96-3).
   * rules, rules.defs: Synchronize variable naming with unstable (340.96-4).
   * get-orig-source: Synchronize with unstable (340.96-4).
   * bug-script: Synchronize with unstable (340.96-4).
