--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (352.79-4) UNRELEASED; urgency=medium
 
   * nvidia-kernel-source: Switch to debhelper compat level 9.
+  * [ppc64el] Do not depend on nvidia-kernel-common.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 19 Feb 2016 15:19:58 +0100
 
