--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * rules: Drop support for ancient .run layout.
   * get-orig-source: Synchronize with unstable (352.79-3).
   * bug-script: Synchronize with unstable (352.79-3).
+  * debian/bug-control.mk: New script to generate bug-control.
   * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
