--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * bug-script: Synchronize with unstable (352.79-3).
   * debian/bug-control.mk: New script to generate bug-control.
   * conftest.h: Keep only the bits relevant for 304.xx.
+  * nvidia-detect: Drop support for lenny.
   * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
