--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.79-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.79-4) unstable; urgency=medium
 
   * nvidia-kernel-source: Switch to debhelper compat level 9.
   * [ppc64el] Do not depend on nvidia-kernel-common.
@@ -10,7 +10,7 @@ nvidia-graphics-drivers (352.79-4) UNRELEASED; urgency=medium
     can be preseeded to allow for non-interactive installations.
     (Closes: #815515)
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 19 Feb 2016 15:19:58 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 26 Feb 2016 04:40:49 +0100
 
 nvidia-graphics-drivers (352.79-3) unstable; urgency=medium
 
