add a transitional libegl1-nvidia package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@6253 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
 nvidia-graphics-drivers (355.11-3) UNRELEASED; urgency=medium
 
-  * Merge changes from 352.79-4.
+  [ Luca Boccassi ]
   * Split libglvnd-nvidia in libopengl0-nvidia and libgldispatch0-nvidia
   * Rename libegl1-nvidia to libegl1-glvnd-nvidia
   * Add dependency from libegl-nvidia0 to libegl1-glvnd-nvidia
   * Switch dependency in nvidia-driver from libegl1-nvidia to libegl-nvidia0
+
+  [ Andreas Beckmann ]
+  * Merge changes from 352.79-4.
+  * Add a transitional libegl1-nvidia package.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 17 Feb 2016 23:36:31 +0000
 
