--- a/debian/changelog
+++ b/debian/changelog
@@ -80,6 +80,7 @@ nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Updated kernel module build, patches and remaining infrastructure for the
     new nvidia-modeset module.
+  * get-orig-source: Generate .orig-$ARCH.tar.gz for each architecture.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 24 Nov 2015 02:15:05 +0100
 
