--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (352.79-5) UNRELEASED; urgency=medium
+
+  * nvidia-kernel-source: Use Depends: make:any to allow foreign arch
+    installation.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 27 Feb 2016 00:35:42 +0100
+
 nvidia-graphics-drivers (352.79-4) unstable; urgency=medium
 
   * nvidia-kernel-source: Switch to debhelper compat level 9.
