support building a 64-bit kernel module with 32-bit userspace
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6269 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
     kernel module build failure on armhf by forcing XEN_PRESENT=0 when
     building on armhf, thanks to Luca.
   * nvidia-detect: Update list of newer PCI IDs from release 352.79.
+  * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
+    support building a 64-bit kernel module with 32-bit userspace.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
