--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ nvidia-graphics-drivers (352.79-5) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update Portuguese debconf translation. Thanks Américo Monteiro!
     (Closes: #816143)
+  * unset ARCH in debian/module/debian/rules.in as well as in dkms.conf,
+    otherwise the wrong value is passed to NVIDIA's conftest and build
+    system (expects kernel arch, is set to Debian binary arch). Fixes fail
+    to build module via nvidia-kernel-source package.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 27 Feb 2016 00:35:42 +0100
 
