drop support for squeeze, squeeze-lts will be EoL soon
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@6296 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
   * nvidia-detect: Update list of newer PCI IDs from release 352.79.
   * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
     support building a 64-bit kernel module with 32-bit userspace.
+  * nvidia-detect: Drop support for squeeze.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
