--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ nvidia-graphics-drivers (352.79-5) UNRELEASED; urgency=medium
     installation.
   * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
     support building a 64-bit kernel module with 32-bit userspace.
+    (Closes: #815986)
   * Drop incomplete Perfkit support.
   * nvidia-detect: Drop support for squeeze(-lts) (will reach EoL soon).
+  * Update lintian overrides.
 
   [ Luca Boccassi ]
   * Update Portuguese debconf translation. Thanks Américo Monteiro!
