--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.79-5) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.79-5) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * nvidia-kernel-source: Use Depends: make:any to allow foreign arch
@@ -18,7 +18,7 @@ nvidia-graphics-drivers (352.79-5) UNRELEASED; urgency=medium
     since having this set to something different than a kernel architecture
     will break the build. This was already done for the dkms module build.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 27 Feb 2016 00:35:42 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 08 Mar 2016 14:07:17 +0100
 
 nvidia-graphics-drivers (352.79-4) unstable; urgency=medium
 
