--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (352.79-5) unstable; urgency=medium
     support building a 64-bit kernel module with 32-bit userspace.
     (Closes: #815986)
   * Drop incomplete Perfkit support.
-  * nvidia-detect: Drop support for squeeze(-lts) (will reach EoL soon).
+  * nvidia-detect: Drop support for squeeze(-lts) (EoL).
   * Update lintian overrides.
 
   [ Luca Boccassi ]
