updated Japanese (jp) debconf translations by Takuma Yamada
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6307 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (352.79-6) UNRELEASED; urgency=medium
+
+  * Updated Japanese (jp) debconf translations by Takuma Yamada.
+    (Closes: #817867)
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 12 Mar 2016 18:22:44 +0100
+
 nvidia-graphics-drivers (352.79-5) unstable; urgency=medium
 
   [ Andreas Beckmann ]
