use an empty nvidia:legacy-check substvar for legacy packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6321 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * debian/bug-control.mk: New script to generate bug-control.
   * conftest.h: Keep only the bits relevant for 304.xx.
   * nvidia-detect: Drop support for lenny.
+  * Use an empty nvidia:legacy-check substvar for legacy packages.
   * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
