--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Use NVIDIA's conftest.sh script to determine settings during module build
     instead of our manually maintained conftest.h header.
   * bug-control, bug-script: Collect some information about OpenCL.
+  * nvidia-glx, nvidia-kernel-*: Report the latest tested Linux version
+    that can build the kernel module in the package description (340.76-3).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
 
