--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ nvidia-graphics-drivers (340.96-1+) UNRELEASED; urgency=medium
   * use-kbuild-flags.patch: New, use KBUILD_CFLAGS from Kbuild to
     support building a 64-bit kernel module with 32-bit userspace.
   * nvidia-detect: Drop support for squeeze.
+  * Add B-D: dpkg-dev (>= 1.17.0) for dpkg-parsechangelog --show-field.
   * Bump Standards-Version to 3.9.7. No changes needed.
   * Update lintian overrides.
 
