Update nv-readme.ids for 364.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6347 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,7 @@ nvidia-graphics-drivers (364.12-1) UNRELEASED; urgency=medium
       PRIME support required Linux kernel version 3.10 or newer).
     - Improved the interactivity of applications that use a hardware cursor
       while G-SYNC is active.
+  * Update nv-readme.ids
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 21 Mar 2016 20:06:03 +0000
 
