Update watch file for 364
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6348 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,7 @@ nvidia-graphics-drivers (364.12-1) UNRELEASED; urgency=medium
     - Improved the interactivity of applications that use a hardware cursor
       while G-SYNC is active.
   * Update nv-readme.ids
+  * Update watch file to point to 364 release
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 21 Mar 2016 20:06:03 +0000
 
