--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ nvidia-graphics-drivers (364.12-1) UNRELEASED; urgency=medium
       while G-SYNC is active.
   * Update nv-readme.ids
   * Update watch file to point to 364 release
+  * Update symbols files
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 21 Mar 2016 20:06:03 +0000
 
