Add infra for new nvidia-drm kernel module
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6351 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,10 @@ nvidia-graphics-drivers (364.12-1) UNRELEASED; urgency=medium
   * Update watch file to point to 364 release
   * Update symbols files
   * Refresh man-fixes-nvidia-smi.patch (fails to apply)
+  * Add new DRM kernel module to DKMS infrastructure and modprobe rules.
+    This new module is distributed without any binary blos. For now modeset is
+    disabled by default, and it can be enabled manually via:
+      sudo modprobe -r nvidia-drm; sudo modprobe nvidia-drm modeset=1
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 21 Mar 2016 20:06:03 +0000
 
