--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
 
+  * Drop substitution backward-compatibility with EoL
+    nvidia-graphics-drivers-legacy-173xx and
+    nvidia-graphics-drivers-legacy-96xx in favor of a reduced diff to
+    nvidia-graphics-drivers-legacy-304xx and newer.
   * Do not run dh_strip_nondeterminism, it may perform modifications not
     permitted by the NVIDIA license.
   * rules, rules.defs: Synchronize variable naming with unstable (352.79-3).
