--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * bug-control, bug-script: Collect some information about OpenCL.
   * nvidia-glx, nvidia-kernel-*: Report the latest tested Linux version
     that can build the kernel module in the package description (340.76-3).
+  * nvidia-kernel-source: Use reproducible timestamps and file order inside
+    /usr/src/nvidia-kernel.tar.bz2 (340.76-1).
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
 
