Update nv-readme.ids for GeForce 920MX, GeForce 930MX, Quadro M6000 24GB.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6363 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (361.42-1) UNRELEASED; urgency=medium
     - Fixed a regression that caused the HSync and VSync mode timing polarity
       flags to be inverted.
   * Refresh man-fixes-nvidia-smi.patch (failed to apply on 361.42).
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 30 Mar 2016 22:21:51 +0100
 
