Close #819042 in changelog
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/358@6365 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (358.16-1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * New upstream short lived branch release 358.16 (2015-11-20).
+    (Closes: #819042)
     * Fixed CVE-2015-7869: Unsanitized User Mode Input.  (Closes: #805917)
     - Fixed a regression, introduced in 358.09, that caused incorrect
       rendering of OpenGL stereo applications in combination with
