--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Use an empty nvidia:legacy-check substvar for legacy packages.
   * Use nvidia:kmod:binary and nvidia:kmod:source substvars.
   * Drop support for backporting to squeeze (EoL).
+  * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
   * KERNEL_UNAME.patch: New, allow usage of KERNEL_UNAME as in 340.xx onwards.
   * Pass only the kernel version via KERNEL_UNAME and let the module build
