--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Stop special-casing of the nvidia-alternative substitution.
   * rules: Drop support for ancient .run layout.
   * Drop support for backporting to squeeze (EoL).
+  * nvidia-detect: Drop support for lenny (EoL) and squeeze (EoL).
   * Do not run dh_strip_nondeterminism, it may perform modifications not
     permitted by the NVIDIA license (340.96-4).
   * nvidia-glx, nvidia-kernel-*: Report the latest tested Linux version
@@ -18,7 +19,6 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * bug-script: Synchronize with unstable (352.79-3).
   * bug-control.mk: New script to generate bug-control.
   * bug-control, bug-script: Collect some information about OpenCL.
-  * nvidia-detect: Drop support for lenny.
   * Use nvidia:kmod:binary and nvidia:kmod:source substvars (304.88-5).
   * Use an empty nvidia:legacy-check substvar for legacy packages.
   * Bump Standards-Version to 3.9.8. No changes needed.
