--- a/debian/changelog
+++ b/debian/changelog
@@ -5,9 +5,9 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
     nvidia-graphics-drivers-legacy-96xx in favor of a reduced diff to
     nvidia-graphics-drivers-legacy-304xx and newer.
   * Stop special-casing of the nvidia-alternative substitution.
-  * rules: Drop support for ancient .run layout.
-  * Drop support for backporting to squeeze (EoL).
-  * nvidia-detect: Drop support for lenny (EoL) and squeeze (EoL).
+  * rules: Drop support for ancient .run layout (352.79-4).
+  * Drop support for backporting to squeeze (EoL) (304.88-4).
+  * nvidia-detect: Drop support for lenny and squeeze(-lts) (EoL) (352.79-5).
   * Do not run dh_strip_nondeterminism, it may perform modifications not
     permitted by the NVIDIA license (340.96-4).
   * nvidia-glx, nvidia-kernel-*: Report the latest tested Linux version
@@ -17,7 +17,7 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * rules, rules.defs: Synchronize variable naming with unstable (352.79-3).
   * get-orig-source: Synchronize with unstable (352.79-3).
   * bug-script: Synchronize with unstable (352.79-3).
-  * bug-control.mk: New script to generate bug-control.
+  * bug-control.mk: New script to generate bug-control (352.79-4).
   * bug-control, bug-script: Collect some information about OpenCL.
   * Use nvidia:kmod:binary and nvidia:kmod:source substvars (304.88-5).
   * Use an empty nvidia:legacy-check substvar for legacy packages.
