--- a/debian/changelog
+++ b/debian/changelog
@@ -23,11 +23,16 @@ nvidia-graphics-drivers (304.131-1+) UNRELEASED; urgency=medium
   * Use an empty nvidia:legacy-check substvar for legacy packages.
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
+  * separate-makefile-kbuild.patch: New, don't make all Makefile targets
+    available to Kbuild.
   * KERNEL_UNAME.patch: New, allow usage of KERNEL_UNAME as in 340.xx onwards.
+  * modernize-conftest.patch: Update the conftest.sh build_cflags() function
+    to the one from 352.79.
   * Pass only the kernel version via KERNEL_UNAME and let the module build
     system figure out the paths.
   * Use NVIDIA's conftest.sh script to determine settings during module build
     instead of our manually maintained conftest.h header.
+  * Disable conftest.sh checks cc_version_check, xen_sanity_check.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 17 Jan 2016 13:04:27 +0100
 
